--- a/install
+++ b/install
@@ -21,6 +21,6 @@ chmod +x /usr/share/applications/SoulseekQt.desktop
 chmod +x ~/Desktop/SoulseekQt.desktop"
 
 echo "SoulseekQt 32bit is now installed"
-echo "it can be found in the app menu or terminal slsk"
+echo "it can be launched in the app menu, desktop or terminal: slsk"
 echo
 echo "XVLVX - hails music lovers"
